src/objects/FA_Pre_Work_Task_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>FA_Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FA_Occurence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course Occurence</label>
        <referenceTo>FA_Course_Occurence__c</referenceTo>
        <relationshipLabel>Pre-Work Task Assignments</relationshipLabel>
        <relationshipName>Occurence_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FA_Task_Description_PWTA__c</fullName>
        <label>Task Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FA_Task_Name_PWTA__c</fullName>
        <label>Task Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FA_Upload_Mark_Complete__c</fullName>
        <label>Upload/Mark Complete</label>
        <picklist>
            <picklistValues>
                <fullName>Upload/Download</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mark Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Pre-Work Task Assignment</label>
    <nameField>
        <displayFormat>Task-{00000}</displayFormat>
        <label>Task ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pre-Work Task Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>